Fix overflow image

--- a/style.css
+++ b/style.css
@@ -6,17 +6,18 @@
 
 body {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     font-family: 'Kumbh Sans', sans-serif;
     font-size: 16px;
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(to top,hsl(240, 73%, 65%),hsl(273, 75%, 66%));
 }
 
 .container {
     display: flex;
     flex-direction: column;
+    margin-top: 190px;
     background-color: #fff;
     border-radius: 25px;
     width: 80%;
@@ -88,7 +89,7 @@ svg {
     .container {
         display: flex;
         flex-direction: row;
-        max-width: 70%;
+        max-width: 1000px;
         overflow: hidden;
         max-height: 700px;
         min-height: 600px;
